@@ -1,0 +1,8 @@
+10.1.0.2    h1
+10.1.0.3    h2
+10.1.2.2    h3
+10.1.2.3    h4
+10.1.0.1    r1-0
+10.1.1.1    r1-1
+10.1.1.2    r2-1
+10.1.2.1    r2-2
