@@ -1,0 +1,3 @@
+#!/bin/bash
+
+java -Dlogback.configurationFile=/root/floodlight/logback.xml -jar /root/floodlight/target/floodlight.jar -cf /etc/floodlight/floodlight.properties &
