@@ -2,7 +2,7 @@
 #
 # This file is a module part of VNUML package.
 #
-# Author: Fermin Galan Marquez (galan@dit.upm.es)
+# Author: Fermin Galan Marquez (galan@dit.upm.es), David Fernández (david@dit.upm.es)
 # Copyright (C) 2005, 	DIT-UPM
 # 			Departamento de Ingenieria de Sistemas Telematicos
 #			Universidad Politecnica de Madrid
